--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <title>To-Do-List</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div id="add-task-container">
+            <input type="text" placeholder="Enter Task" id="input-task">
+            <button id="add-task"><i class="fa-solid fa-plus"></i></button>
+        </div>
+        <div id="task-container">
+            
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
